Simplified tags to limit number of API files.
